Trying to fix image issues on heroku
Weather refuses to show on the website?

--- a/app/views/content/projects.ejs
+++ b/app/views/content/projects.ejs
@@ -27,7 +27,7 @@
     </div>
     <div class="proj">
         <a href="https://altord.github.io/js-weather-app/"><h2>Weather App</h2></a> 
-        <img  src="./content/images/weather.JPG">
+        <img  src="./content/images/weather.jpg">
         <br/>
         <br/>
         <p>A basic weather app that allows users to search whatever country or city in the world they want and have it presented to them. Another project I did while working through The Odin Project</p>
